# public/swagger.json
@@ -21,6 +21,7 @@
 					}
 				},
 				"required": [
+					"id",
 					"first_name",
 					"last_name"
 				],
@@ -90,6 +91,43 @@
 				],
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/books/{id}": {
+			"get": {
+				"operationId": "GetBooksById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/BookDTO"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Books"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		},
 		"/authors": {
