# src/routes/index.ts
@@ -82,6 +82,36 @@ export function RegisterRoutes(app: Router) {
                 return next(err);
             }
         });
+
+        app.get('/books/:id',
+          ...(fetchMiddlewares<RequestHandler>(BookController)),
+          ...(fetchMiddlewares<RequestHandler>(BookController.prototype.getBooksById)),
+
+          async function BookController_getBookById(request: ExRequest, response: ExResponse, next: any) {
+          const args: Record<string, TsoaRoute.ParameterSchema> = {
+                  id: {"in":"path","name":"id","required":true,"dataType":"double"},
+          };
+
+          // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+          let validatedArgs: any[] = [];
+          try {
+              validatedArgs = templateService.getValidatedArgs({ args, request, response });
+
+              const controller = new BookController();
+
+            await templateService.apiHandler({
+              methodName: 'getBookById',
+              controller,
+              response,
+              next,
+              validatedArgs,
+              successStatus: undefined,
+            });
+          } catch (err) {
+              return next(err);
+          }
+      });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         app.get('/authors',
             ...(fetchMiddlewares<RequestHandler>(AuthorController)),
